[project]
name = "saffron-debug"
version = "1.0.0"
description = "A dead simple logging and debugging library."
readme = "README.md"
authors = [
    { email = "wadecheng3301@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/sdbg"]